# M_Eng_Project

./: README.md
jaco_inv_dynamics_controller/: CMakeLists.txt  package.xml
jaco_inv_dynamics_controller/config/: inv_dynamics_controller.yaml  inv_dynamics_controller_arm.yaml  joint_trajectory_controller.yaml  simple_controllers.yaml
jaco_inv_dynamics_controller/include/jaco_inv_dynamics_controller/: PID_planner_arm.h  joint_inv_dynamics_controller.h  joint_inv_dynamics_controller_arm.h  joint_inv_dynamics_planner.h  joint_inv_dynamics_planner_arm.h  quintic_poly.h
jaco_inv_dynamics_controller/launch/: PID_planner_arm.launch  inv_dynamics_controller.launch  inv_dynamics_controller_arm.launch
jaco_inv_dynamics_controller/msg/: JointTrajectoryPoint_w_bool.msg
jaco_inv_dynamics_controller/src/: Gazebo_controllers_initialize.cpp  PID_planner_arm.cpp  joint_inv_dynamics_controller.cpp  joint_inv_dynamics_controller_arm.cpp  joint_inv_dynamics_planner.cpp  joint_inv_dynamics_planner_arm.cpp  joint_states_unique_extract.py
jaco_inv_dynamics_controller/srv/: MoveTo_jaco.srv  Torque_call.srv
